a1/MiniLang/src/parser.output
Terminals unused in grammar

   tSUB
   tNEG


State 38 conflicts: 1 shift/reduce
State 39 conflicts: 12 shift/reduce
State 62 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 73 conflicts: 12 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: %empty
    3      | stmt stmts

    4 stmt: tREAD tLPAREN tIDENT tRPAREN tSEMICOLON
    5     | tPRINT tLPAREN expr tRPAREN tSEMICOLON
    6     | decl
    7     | tIDENT tASSIGN expr tSEMICOLON
    8     | ifstmt
    9     | whileloop
   10     | tCOMMENT

   11 decl: tVAR tIDENT tCOLON tBOOLTYPE tSEMICOLON
   12     | tVAR tIDENT tCOLON tINTTYPE tSEMICOLON
   13     | tVAR tIDENT tCOLON tFLOATTYPE tSEMICOLON
   14     | tVAR tIDENT tCOLON tSTRINGTYPE tSEMICOLON
   15     | tVAR tIDENT tCOLON tBOOLTYPE tASSIGN expr tSEMICOLON
   16     | tVAR tIDENT tCOLON tINTTYPE tASSIGN expr tSEMICOLON
   17     | tVAR tIDENT tCOLON tFLOATTYPE tASSIGN expr tSEMICOLON
   18     | tVAR tIDENT tCOLON tSTRINGTYPE tASSIGN expr tSEMICOLON

   19 ifstmt: tIF tLPAREN expr tRPAREN tLBRACE stmts tRBRACE elsestmt
   20       | tIF tLPAREN expr tRPAREN tLBRACE stmts tRBRACE

   21 elsestmt: tELSE tLBRACE stmts tRBRACE
   22         | tELSE ifstmt

   23 whileloop: tWHILE tLPAREN expr tRPAREN tLBRACE stmts tRBRACE

   24 expr: tIDENT
   25     | tTRUE
   26     | tFALSE
   27     | tINTVAL
   28     | tFLOATVAL
   29     | tSTRINGVAL
   30     | tMINUS expr
   31     | tNOT expr
   32     | tLPAREN expr tRPAREN
   33     | expr tMUL expr
   34     | expr tDIV expr
   35     | expr tADD expr
   36     | expr tMINUS expr
   37     | expr tGREATEREQ expr
   38     | expr tLESSEQ expr
   39     | expr tGREATER expr
   40     | expr tLESS expr
   41     | expr tEQUALS expr
   42     | expr tNEQUALS expr
   43     | expr tAND expr
   44     | expr tOR expr


Terminals, with rules where they appear

$end (0) 0
error (256)
tTRUE (258) 25
tFALSE (259) 26
tINTVAL (260) 27
tFLOATVAL (261) 28
tSTRINGVAL (262) 29
tBOOLTYPE (263) 11 15
tINTTYPE (264) 12 16
tFLOATTYPE (265) 13 17
tSTRINGTYPE (266) 14 18
tIDENT (267) 4 7 11 12 13 14 15 16 17 18 24
tLPAREN (268) 4 5 19 20 23 32
tRPAREN (269) 4 5 19 20 23 32
tLBRACE (270) 19 20 21 23
tRBRACE (271) 19 20 21 23
tSEMICOLON (272) 4 5 7 11 12 13 14 15 16 17 18
tVAR (273) 11 12 13 14 15 16 17 18
tIF (274) 19 20
tELSE (275) 21 22
tWHILE (276) 23
tREAD (277) 4
tPRINT (278) 5
tCOLON (279) 11 12 13 14 15 16 17 18
tASSIGN (280) 7 15 16 17 18
tCOMMENT (281) 10
tADD (282) 35
tMUL (283) 33
tDIV (284) 34
tEQUALS (285) 41
tNEQUALS (286) 42
tGREATEREQ (287) 37
tLESSEQ (288) 38
tGREATER (289) 39
tLESS (290) 40
tAND (291) 43
tOR (292) 44
tNOT (293) 31
tMINUS (294) 30 36
tSUB (295)
tNEG (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
program (43)
    on left: 1, on right: 0
stmts (44)
    on left: 2 3, on right: 1 3 19 20 21 23
stmt (45)
    on left: 4 5 6 7 8 9 10, on right: 3
decl (46)
    on left: 11 12 13 14 15 16 17 18, on right: 6
ifstmt (47)
    on left: 19 20, on right: 8 22
elsestmt (48)
    on left: 21 22, on right: 19
whileloop (49)
    on left: 23, on right: 9
expr (50)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44, on right: 5 7 15 16 17 18 19 20 23 30 31 32 33 34 35
    36 37 38 39 40 41 42 43 44


State 0

    0 $accept: . program $end
    1 program: . stmts
    2 stmts: . %empty  [$end]
    3      | . stmt stmts
    4 stmt: . tREAD tLPAREN tIDENT tRPAREN tSEMICOLON
    5     | . tPRINT tLPAREN expr tRPAREN tSEMICOLON
    6     | . decl
    7     | . tIDENT tASSIGN expr tSEMICOLON
    8     | . ifstmt
    9     | . whileloop
   10     | . tCOMMENT
   11 decl: . tVAR tIDENT tCOLON tBOOLTYPE tSEMICOLON
   12     | . tVAR tIDENT tCOLON tINTTYPE tSEMICOLON
   13     | . tVAR tIDENT tCOLON tFLOATTYPE tSEMICOLON
   14     | . tVAR tIDENT tCOLON tSTRINGTYPE tSEMICOLON
   15     | . tVAR tIDENT tCOLON tBOOLTYPE tASSIGN expr tSEMICOLON
   16     | . tVAR tIDENT tCOLON tINTTYPE tASSIGN expr tSEMICOLON
   17     | . tVAR tIDENT tCOLON tFLOATTYPE tASSIGN expr tSEMICOLON
   18     | . tVAR tIDENT tCOLON tSTRINGTYPE tASSIGN expr tSEMICOLON
   19 ifstmt: . tIF tLPAREN expr tRPAREN tLBRACE stmts tRBRACE elsestmt
   20       | . tIF tLPAREN expr tRPAREN tLBRACE stmts tRBRACE
   23 whileloop: . tWHILE tLPAREN expr tRPAREN tLBRACE stmts tRBRACE

    tIDENT    shift, and go to state 1
    tVAR      shift, and go to state 2
    tIF       shift, and go to state 3
    tWHILE    shift, and go to state 4
    tREAD     shift, and go to state 5
    tPRINT    shift, and go to state 6
    tCOMMENT  shift, and go to state 7

    $default  reduce using rule 2 (stmts)

    program    go to state 8
    stmts      go to state 9
    stmt       go to state 10
    decl       go to state 11
    ifstmt     go to state 12
    whileloop  go to state 13


State 1

    7 stmt: tIDENT . tASSIGN expr tSEMICOLON

    tASSIGN  shift, and go to state 14


State 2

   11 decl: tVAR . tIDENT tCOLON tBOOLTYPE tSEMICOLON
   12     | tVAR . tIDENT tCOLON tINTTYPE tSEMICOLON
   13     | tVAR . tIDENT tCOLON tFLOATTYPE tSEMICOLON
   14     | tVAR . tIDENT tCOLON tSTRINGTYPE tSEMICOLON
   15     | tVAR . tIDENT tCOLON tBOOLTYPE tASSIGN expr tSEMICOLON
   16     | tVAR . tIDENT tCOLON tINTTYPE tASSIGN expr tSEMICOLON
   17     | tVAR . tIDENT tCOLON tFLOATTYPE tASSIGN expr tSEMICOLON
   18     | tVAR . tIDENT tCOLON tSTRINGTYPE tASSIGN expr tSEMICOLON

    tIDENT  shift, and go to state 15


State 3

   19 ifstmt: tIF . tLPAREN expr tRPAREN tLBRACE stmts tRBRACE elsestmt
   20       | tIF . tLPAREN expr tRPAREN tLBRACE stmts tRBRACE

    tLPAREN  shift, and go to state 16


State 4

   23 whileloop: tWHILE . tLPAREN expr tRPAREN tLBRACE stmts tRBRACE

    tLPAREN  shift, and go to state 17


State 5

    4 stmt: tREAD . tLPAREN tIDENT tRPAREN tSEMICOLON

    tLPAREN  shift, and go to state 18


State 6

    5 stmt: tPRINT . tLPAREN expr tRPAREN tSEMICOLON

    tLPAREN  shift, and go to state 19


State 7

   10 stmt: tCOMMENT .

    $default  reduce using rule 10 (stmt)


State 8

    0 $accept: program . $end

    $end  shift, and go to state 20


State 9

    1 program: stmts .

    $default  reduce using rule 1 (program)


State 10

    2 stmts: . %empty  [$end, tRBRACE]
    3      | . stmt stmts
    3      | stmt . stmts
    4 stmt: . tREAD tLPAREN tIDENT tRPAREN tSEMICOLON
    5     | . tPRINT tLPAREN expr tRPAREN tSEMICOLON
    6     | . decl
    7     | . tIDENT tASSIGN expr tSEMICOLON
    8     | . ifstmt
    9     | . whileloop
   10     | . tCOMMENT
   11 decl: . tVAR tIDENT tCOLON tBOOLTYPE tSEMICOLON
   12     | . tVAR tIDENT tCOLON tINTTYPE tSEMICOLON
   13     | . tVAR tIDENT tCOLON tFLOATTYPE tSEMICOLON
   14     | . tVAR tIDENT tCOLON tSTRINGTYPE tSEMICOLON
   15     | . tVAR tIDENT tCOLON tBOOLTYPE tASSIGN expr tSEMICOLON
   16     | . tVAR tIDENT tCOLON tINTTYPE tASSIGN expr tSEMICOLON
   17     | . tVAR tIDENT tCOLON tFLOATTYPE tASSIGN expr tSEMICOLON
   18     | . tVAR tIDENT tCOLON tSTRINGTYPE tASSIGN expr tSEMICOLON
   19 ifstmt: . tIF tLPAREN expr tRPAREN tLBRACE stmts tRBRACE elsestmt
   20       | . tIF tLPAREN expr tRPAREN tLBRACE stmts tRBRACE
   23 whileloop: . tWHILE tLPAREN expr tRPAREN tLBRACE stmts tRBRACE

    tIDENT    shift, and go to state 1
    tVAR      shift, and go to state 2
    tIF       shift, and go to state 3
    tWHILE    shift, and go to state 4
    tREAD     shift, and go to state 5
    tPRINT    shift, and go to state 6
    tCOMMENT  shift, and go to state 7

    $default  reduce using rule 2 (stmts)

    stmts      go to state 21
    stmt       go to state 10
    decl       go to state 11
    ifstmt     go to state 12
    whileloop  go to state 13


State 11

    6 stmt: decl .

    $default  reduce using rule 6 (stmt)


State 12

    8 stmt: ifstmt .

    $default  reduce using rule 8 (stmt)


State 13

    9 stmt: whileloop .

    $default  reduce using rule 9 (stmt)


State 14

    7 stmt: tIDENT tASSIGN . expr tSEMICOLON
   24 expr: . tIDENT
   25     | . tTRUE
   26     | . tFALSE
   27     | . tINTVAL
   28     | . tFLOATVAL
   29     | . tSTRINGVAL
   30     | . tMINUS expr
   31     | . tNOT expr
   32     | . tLPAREN expr tRPAREN
   33     | . expr tMUL expr
   34     | . expr tDIV expr
   35     | . expr tADD expr
   36     | . expr tMINUS expr
   37     | . expr tGREATEREQ expr
   38     | . expr tLESSEQ expr
   39     | . expr tGREATER expr
   40     | . expr tLESS expr
   41     | . expr tEQUALS expr
   42     | . expr tNEQUALS expr
   43     | . expr tAND expr
   44     | . expr tOR expr

    tTRUE       shift, and go to state 22
    tFALSE      shift, and go to state 23
    tINTVAL     shift, and go to state 24
    tFLOATVAL   shift, and go to state 25
    tSTRINGVAL  shift, and go to state 26
    tIDENT      shift, and go to state 27
    tLPAREN     shift, and go to state 28
    tNOT        shift, and go to state 29
    tMINUS      shift, and go to state 30

    expr  go to state 31


State 15

   11 decl: tVAR tIDENT . tCOLON tBOOLTYPE tSEMICOLON
   12     | tVAR tIDENT . tCOLON tINTTYPE tSEMICOLON
   13     | tVAR tIDENT . tCOLON tFLOATTYPE tSEMICOLON
   14     | tVAR tIDENT . tCOLON tSTRINGTYPE tSEMICOLON
   15     | tVAR tIDENT . tCOLON tBOOLTYPE tASSIGN expr tSEMICOLON
   16     | tVAR tIDENT . tCOLON tINTTYPE tASSIGN expr tSEMICOLON
   17     | tVAR tIDENT . tCOLON tFLOATTYPE tASSIGN expr tSEMICOLON
   18     | tVAR tIDENT . tCOLON tSTRINGTYPE tASSIGN expr tSEMICOLON

    tCOLON  shift, and go to state 32


State 16

   19 ifstmt: tIF tLPAREN . expr tRPAREN tLBRACE stmts tRBRACE elsestmt
   20       | tIF tLPAREN . expr tRPAREN tLBRACE stmts tRBRACE
   24 expr: . tIDENT
   25     | . tTRUE
   26     | . tFALSE
   27     | . tINTVAL
   28     | . tFLOATVAL
   29     | . tSTRINGVAL
   30     | . tMINUS expr
   31     | . tNOT expr
   32     | . tLPAREN expr tRPAREN
   33     | . expr tMUL expr
   34     | . expr tDIV expr
   35     | . expr tADD expr
   36     | . expr tMINUS expr
   37     | . expr tGREATEREQ expr
   38     | . expr tLESSEQ expr
   39     | . expr tGREATER expr
   40     | . expr tLESS expr
   41     | . expr tEQUALS expr
   42     | . expr tNEQUALS expr
   43     | . expr tAND expr
   44     | . expr tOR expr

    tTRUE       shift, and go to state 22
    tFALSE      shift, and go to state 23
    tINTVAL     shift, and go to state 24
    tFLOATVAL   shift, and go to state 25
    tSTRINGVAL  shift, and go to state 26
    tIDENT      shift, and go to state 27
    tLPAREN     shift, and go to state 28
    tNOT        shift, and go to state 29
    tMINUS      shift, and go to state 30

    expr  go to state 33


State 17

   23 whileloop: tWHILE tLPAREN . expr tRPAREN tLBRACE stmts tRBRACE
   24 expr: . tIDENT
   25     | . tTRUE
   26     | . tFALSE
   27     | . tINTVAL
   28     | . tFLOATVAL
   29     | . tSTRINGVAL
   30     | . tMINUS expr
   31     | . tNOT expr
   32     | . tLPAREN expr tRPAREN
   33     | . expr tMUL expr
   34     | . expr tDIV expr
   35     | . expr tADD expr
   36     | . expr tMINUS expr
   37     | . expr tGREATEREQ expr
   38     | . expr tLESSEQ expr
   39     | . expr tGREATER expr
   40     | . expr tLESS expr
   41     | . expr tEQUALS expr
   42     | . expr tNEQUALS expr
   43     | . expr tAND expr
   44     | . expr tOR expr

    tTRUE       shift, and go to state 22
    tFALSE      shift, and go to state 23
    tINTVAL     shift, and go to state 24
    tFLOATVAL   shift, and go to state 25
    tSTRINGVAL  shift, and go to state 26
    tIDENT      shift, and go to state 27
    tLPAREN     shift, and go to state 28
    tNOT        shift, and go to state 29
    tMINUS      shift, and go to state 30

    expr  go to state 34


State 18

    4 stmt: tREAD tLPAREN . tIDENT tRPAREN tSEMICOLON

    tIDENT  shift, and go to state 35


State 19

    5 stmt: tPRINT tLPAREN . expr tRPAREN tSEMICOLON
   24 expr: . tIDENT
   25     | . tTRUE
   26     | . tFALSE
   27     | . tINTVAL
   28     | . tFLOATVAL
   29     | . tSTRINGVAL
   30     | . tMINUS expr
   31     | . tNOT expr
   32     | . tLPAREN expr tRPAREN
   33     | . expr tMUL expr
   34     | . expr tDIV expr
   35     | . expr tADD expr
   36     | . expr tMINUS expr
   37     | . expr tGREATEREQ expr
   38     | . expr tLESSEQ expr
   39     | . expr tGREATER expr
   40     | . expr tLESS expr
   41     | . expr tEQUALS expr
   42     | . expr tNEQUALS expr
   43     | . expr tAND expr
   44     | . expr tOR expr

    tTRUE       shift, and go to state 22
    tFALSE      shift, and go to state 23
    tINTVAL     shift, and go to state 24
    tFLOATVAL   shift, and go to state 25
    tSTRINGVAL  shift, and go to state 26
    tIDENT      shift, and go to state 27
    tLPAREN     shift, and go to state 28
    tNOT        shift, and go to state 29
    tMINUS      shift, and go to state 30

    expr  go to state 36


State 20

    0 $accept: program $end .

    $default  accept


State 21

    3 stmts: stmt stmts .

    $default  reduce using rule 3 (stmts)


State 22

   25 expr: tTRUE .

    $default  reduce using rule 25 (expr)


State 23

   26 expr: tFALSE .

    $default  reduce using rule 26 (expr)


State 24

   27 expr: tINTVAL .

    $default  reduce using rule 27 (expr)


State 25

   28 expr: tFLOATVAL .

    $default  reduce using rule 28 (expr)


State 26

   29 expr: tSTRINGVAL .

    $default  reduce using rule 29 (expr)


State 27

   24 expr: tIDENT .

    $default  reduce using rule 24 (expr)


State 28

   24 expr: . tIDENT
   25     | . tTRUE
   26     | . tFALSE
   27     | . tINTVAL
   28     | . tFLOATVAL
   29     | . tSTRINGVAL
   30     | . tMINUS expr
   31     | . tNOT expr
   32     | . tLPAREN expr tRPAREN
   32     | tLPAREN . expr tRPAREN
   33     | . expr tMUL expr
   34     | . expr tDIV expr
   35     | . expr tADD expr
   36     | . expr tMINUS expr
   37     | . expr tGREATEREQ expr
   38     | . expr tLESSEQ expr
   39     | . expr tGREATER expr
   40     | . expr tLESS expr
   41     | . expr tEQUALS expr
   42     | . expr tNEQUALS expr
   43     | . expr tAND expr
   44     | . expr tOR expr

    tTRUE       shift, and go to state 22
    tFALSE      shift, and go to state 23
    tINTVAL     shift, and go to state 24
    tFLOATVAL   shift, and go to state 25
    tSTRINGVAL  shift, and go to state 26
    tIDENT      shift, and go to state 27
    tLPAREN     shift, and go to state 28
    tNOT        shift, and go to state 29
    tMINUS      shift, and go to state 30

    expr  go to state 37


State 29

   24 expr: . tIDENT
   25     | . tTRUE
   26     | . tFALSE
   27     | . tINTVAL
   28     | . tFLOATVAL
   29     | . tSTRINGVAL
   30     | . tMINUS expr
   31     | . tNOT expr
   31     | tNOT . expr
   32     | . tLPAREN expr tRPAREN
   33     | . expr tMUL expr
   34     | . expr tDIV expr
   35     | . expr tADD expr
   36     | . expr tMINUS expr
   37     | . expr tGREATEREQ expr
   38     | . expr tLESSEQ expr
   39     | . expr tGREATER expr
   40     | . expr tLESS expr
   41     | . expr tEQUALS expr
   42     | . expr tNEQUALS expr
   43     | . expr tAND expr
   44     | . expr tOR expr

    tTRUE       shift, and go to state 22
    tFALSE      shift, and go to state 23
    tINTVAL     shift, and go to state 24
    tFLOATVAL   shift, and go to state 25
    tSTRINGVAL  shift, and go to state 26
    tIDENT      shift, and go to state 27
    tLPAREN     shift, and go to state 28
    tNOT        shift, and go to state 29
    tMINUS      shift, and go to state 30

    expr  go to state 38


State 30

   24 expr: . tIDENT
   25     | . tTRUE
   26     | . tFALSE
   27     | . tINTVAL
   28     | . tFLOATVAL
   29     | . tSTRINGVAL
   30     | . tMINUS expr
   30     | tMINUS . expr
   31     | . tNOT expr
   32     | . tLPAREN expr tRPAREN
   33     | . expr tMUL expr
   34     | . expr tDIV expr
   35     | . expr tADD expr
   36     | . expr tMINUS expr
   37     | . expr tGREATEREQ expr
   38     | . expr tLESSEQ expr
   39     | . expr tGREATER expr
   40     | . expr tLESS expr
   41     | . expr tEQUALS expr
   42     | . expr tNEQUALS expr
   43     | . expr tAND expr
   44     | . expr tOR expr

    tTRUE       shift, and go to state 22
    tFALSE      shift, and go to state 23
    tINTVAL     shift, and go to state 24
    tFLOATVAL   shift, and go to state 25
    tSTRINGVAL  shift, and go to state 26
    tIDENT      shift, and go to state 27
    tLPAREN     shift, and go to state 28
    tNOT        shift, and go to state 29
    tMINUS      shift, and go to state 30

    expr  go to state 39


State 31

    7 stmt: tIDENT tASSIGN expr . tSEMICOLON
   33 expr: expr . tMUL expr
   34     | expr . tDIV expr
   35     | expr . tADD expr
   36     | expr . tMINUS expr
   37     | expr . tGREATEREQ expr
   38     | expr . tLESSEQ expr
   39     | expr . tGREATER expr
   40     | expr . tLESS expr
   41     | expr . tEQUALS expr
   42     | expr . tNEQUALS expr
   43     | expr . tAND expr
   44     | expr . tOR expr

    tSEMICOLON  shift, and go to state 40
    tADD        shift, and go to state 41
    tMUL        shift, and go to state 42
    tDIV        shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51
    tMINUS      shift, and go to state 52


State 32

   11 decl: tVAR tIDENT tCOLON . tBOOLTYPE tSEMICOLON
   12     | tVAR tIDENT tCOLON . tINTTYPE tSEMICOLON
   13     | tVAR tIDENT tCOLON . tFLOATTYPE tSEMICOLON
   14     | tVAR tIDENT tCOLON . tSTRINGTYPE tSEMICOLON
   15     | tVAR tIDENT tCOLON . tBOOLTYPE tASSIGN expr tSEMICOLON
   16     | tVAR tIDENT tCOLON . tINTTYPE tASSIGN expr tSEMICOLON
   17     | tVAR tIDENT tCOLON . tFLOATTYPE tASSIGN expr tSEMICOLON
   18     | tVAR tIDENT tCOLON . tSTRINGTYPE tASSIGN expr tSEMICOLON

    tBOOLTYPE    shift, and go to state 53
    tINTTYPE     shift, and go to state 54
    tFLOATTYPE   shift, and go to state 55
    tSTRINGTYPE  shift, and go to state 56


State 33

   19 ifstmt: tIF tLPAREN expr . tRPAREN tLBRACE stmts tRBRACE elsestmt
   20       | tIF tLPAREN expr . tRPAREN tLBRACE stmts tRBRACE
   33 expr: expr . tMUL expr
   34     | expr . tDIV expr
   35     | expr . tADD expr
   36     | expr . tMINUS expr
   37     | expr . tGREATEREQ expr
   38     | expr . tLESSEQ expr
   39     | expr . tGREATER expr
   40     | expr . tLESS expr
   41     | expr . tEQUALS expr
   42     | expr . tNEQUALS expr
   43     | expr . tAND expr
   44     | expr . tOR expr

    tRPAREN     shift, and go to state 57
    tADD        shift, and go to state 41
    tMUL        shift, and go to state 42
    tDIV        shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51
    tMINUS      shift, and go to state 52


State 34

   23 whileloop: tWHILE tLPAREN expr . tRPAREN tLBRACE stmts tRBRACE
   33 expr: expr . tMUL expr
   34     | expr . tDIV expr
   35     | expr . tADD expr
   36     | expr . tMINUS expr
   37     | expr . tGREATEREQ expr
   38     | expr . tLESSEQ expr
   39     | expr . tGREATER expr
   40     | expr . tLESS expr
   41     | expr . tEQUALS expr
   42     | expr . tNEQUALS expr
   43     | expr . tAND expr
   44     | expr . tOR expr

    tRPAREN     shift, and go to state 58
    tADD        shift, and go to state 41
    tMUL        shift, and go to state 42
    tDIV        shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51
    tMINUS      shift, and go to state 52


State 35

    4 stmt: tREAD tLPAREN tIDENT . tRPAREN tSEMICOLON

    tRPAREN  shift, and go to state 59


State 36

    5 stmt: tPRINT tLPAREN expr . tRPAREN tSEMICOLON
   33 expr: expr . tMUL expr
   34     | expr . tDIV expr
   35     | expr . tADD expr
   36     | expr . tMINUS expr
   37     | expr . tGREATEREQ expr
   38     | expr . tLESSEQ expr
   39     | expr . tGREATER expr
   40     | expr . tLESS expr
   41     | expr . tEQUALS expr
   42     | expr . tNEQUALS expr
   43     | expr . tAND expr
   44     | expr . tOR expr

    tRPAREN     shift, and go to state 60
    tADD        shift, and go to state 41
    tMUL        shift, and go to state 42
    tDIV        shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51
    tMINUS      shift, and go to state 52


State 37

   32 expr: tLPAREN expr . tRPAREN
   33     | expr . tMUL expr
   34     | expr . tDIV expr
   35     | expr . tADD expr
   36     | expr . tMINUS expr
   37     | expr . tGREATEREQ expr
   38     | expr . tLESSEQ expr
   39     | expr . tGREATER expr
   40     | expr . tLESS expr
   41     | expr . tEQUALS expr
   42     | expr . tNEQUALS expr
   43     | expr . tAND expr
   44     | expr . tOR expr

    tRPAREN     shift, and go to state 61
    tADD        shift, and go to state 41
    tMUL        shift, and go to state 42
    tDIV        shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51
    tMINUS      shift, and go to state 52


State 38

   31 expr: tNOT expr .  [tRPAREN, tSEMICOLON, tADD, tMUL, tDIV, tEQUALS, tNEQUALS, tGREATEREQ, tLESSEQ, tGREATER, tLESS, tAND, tOR, tMINUS]
   33     | expr . tMUL expr
   34     | expr . tDIV expr
   35     | expr . tADD expr
   36     | expr . tMINUS expr
   37     | expr . tGREATEREQ expr
   38     | expr . tLESSEQ expr
   39     | expr . tGREATER expr
   40     | expr . tLESS expr
   41     | expr . tEQUALS expr
   42     | expr . tNEQUALS expr
   43     | expr . tAND expr
   44     | expr . tOR expr

    tMINUS  shift, and go to state 52

    tMINUS    [reduce using rule 31 (expr)]
    $default  reduce using rule 31 (expr)

    Conflict between rule 31 and token tADD resolved as reduce (tADD < tNOT).
    Conflict between rule 31 and token tMUL resolved as reduce (tMUL < tNOT).
    Conflict between rule 31 and token tDIV resolved as reduce (tDIV < tNOT).
    Conflict between rule 31 and token tEQUALS resolved as reduce (tEQUALS < tNOT).
    Conflict between rule 31 and token tNEQUALS resolved as reduce (tNEQUALS < tNOT).
    Conflict between rule 31 and token tGREATEREQ resolved as reduce (tGREATEREQ < tNOT).
    Conflict between rule 31 and token tLESSEQ resolved as reduce (tLESSEQ < tNOT).
    Conflict between rule 31 and token tGREATER resolved as reduce (tGREATER < tNOT).
    Conflict between rule 31 and token tLESS resolved as reduce (tLESS < tNOT).
    Conflict between rule 31 and token tAND resolved as reduce (tAND < tNOT).
    Conflict between rule 31 and token tOR resolved as reduce (tOR < tNOT).


State 39

   30 expr: tMINUS expr .  [tRPAREN, tSEMICOLON, tADD, tMUL, tDIV, tEQUALS, tNEQUALS, tGREATEREQ, tLESSEQ, tGREATER, tLESS, tAND, tOR, tMINUS]
   33     | expr . tMUL expr
   34     | expr . tDIV expr
   35     | expr . tADD expr
   36     | expr . tMINUS expr
   37     | expr . tGREATEREQ expr
   38     | expr . tLESSEQ expr
   39     | expr . tGREATER expr
   40     | expr . tLESS expr
   41     | expr . tEQUALS expr
   42     | expr . tNEQUALS expr
   43     | expr . tAND expr
   44     | expr . tOR expr

    tADD        shift, and go to state 41
    tMUL        shift, and go to state 42
    tDIV        shift, and go to state 43
    tEQUALS     shift, and go to state 44
    tNEQUALS    shift, and go to state 45
    tGREATEREQ  shift, and go to state 46
    tLESSEQ     shift, and go to state 47
    tGREATER    shift, and go to state 48
    tLESS       shift, and go to state 49
    tAND        shift, and go to state 50
    tOR         shift, and go to state 51
    tMINUS      shift, and go to state 52

    tADD        [reduce using rule 30 (expr)]
    tMUL        [reduce using rule 30 (expr)]
    tDIV        [reduce using rule 30 (expr)]
    tEQUALS     [reduce using rule 30 (expr)]
    tNEQUALS    [reduce using rule 30 (expr)]
    tGREATEREQ  [reduce using rule 30 (expr)]
    tLESSEQ     [reduce using rule 30 (expr)]
    tGREATER    [reduce using rule 30 (expr)]
    tLESS       [reduce using rule 30 (expr)]
    tAND        [reduce using rule 30 (expr)]
    tOR         [reduce using rule 30 (expr)]
    tMINUS      [reduce using rule 30 (expr)]
    $default    reduce using rule 30 (expr)


State 40

    7 stmt: tIDENT tASSIGN expr tSEMICOLON .

    $default  reduce using rule 7 (stmt)


State 41

   24 expr: . tIDENT
   25     | . tTRUE
   26     | . tFALSE
   27     | . tINTVAL
   28     | . tFLOATVAL
   29     | . tSTRINGVAL
   30     | . tMINUS expr
   31     | . tNOT expr
   32     | . tLPAREN expr tRPAREN
   33     | . expr tMUL expr
   34     | . expr tDIV expr
   35     | . expr tADD expr
   35     | expr tADD . expr
   36     | . expr tMINUS expr
   37     | . expr tGREATEREQ expr
   38     | . expr tLESSEQ expr
   39     | . expr tGREATER expr
   40     | . expr tLESS expr
   41     | . expr tEQUALS expr
   42     | . expr tNEQUALS expr
   43     | . expr tAND expr
   44     | . expr tOR expr

    tTRUE       shift, and go to state 22
    tFALSE      shift, and go to state 23
    tINTVAL     shift, and go to state 24
    tFLOATVAL   shift, and go to state 25
    tSTRINGVAL  shift, and go to state 26
    tIDENT      shift, and go to state 27
    tLPAREN     shift, and go to state 28
    tNOT        shift, and go to state 29
    tMINUS      shift, and go to state 30

    expr  go to state 62


State 42

   24 expr: . tIDENT
   25     | . tTRUE
   26     | . tFALSE
   27     | . tINTVAL
   28     | . tFLOATVAL
   29     | . tSTRINGVAL
   30     | . tMINUS expr
   31     | . tNOT expr
   32     | . tLPAREN expr tRPAREN
   33     | . expr tMUL expr
   33     | expr tMUL . expr
   34     | . expr tDIV expr
   35     | . expr tADD expr
   36     | . expr tMINUS expr
   37     | . expr tGREATEREQ expr
   38     | . expr tLESSEQ expr
   39     | . expr tGREATER expr
   40     | . expr tLESS expr
   41     | . expr tEQUALS expr
   42     | . expr tNEQUALS expr
   43     | . expr tAND expr
   44     | . expr tOR expr

    tTRUE       shift, and go to state 22
    tFALSE      shift, and go to state 23
    tINTVAL     shift, and go to state 24
    tFLOATVAL   shift, and go to state 25
    tSTRINGVAL  shift, and go to state 26
    tIDENT      shift, and go to state 27
    tLPAREN     shift, and go to state 28
    tNOT        shift, and go to state 29
    tMINUS      shift, and go to state 30

    expr  go to state 63


State 43

   24 expr: . tIDENT
   25     | . tTRUE
   26     | . tFALSE
   27     | . tINTVAL
   28     | . tFLOATVAL
   29     | . tSTRINGVAL
   30     | . tMINUS expr
   31     | . tNOT expr
   32     | . tLPAREN expr tRPAREN
   33     | . expr tMUL expr
   34     | . expr tDIV expr
   34     | expr tDIV . expr
   35     | . expr tADD expr
   36     | . expr tMINUS expr
   37     | . expr tGREATEREQ expr
   38     | . expr tLESSEQ expr
   39     | . expr tGREATER expr
   40     | . expr tLESS expr
   41     | . expr tEQUALS expr
   42     | . expr tNEQUALS expr
   43     | . expr tAND expr
   44     | . expr tOR expr

    tTRUE       shift, and go to state 22
    tFALSE      shift, and go to state 23
    tINTVAL     shift, and go to state 24
    tFLOATVAL   shift, and go to state 25
    tSTRINGVAL  shift, and go to state 26
    tIDENT      shift, and go to state 27
    tLPAREN     shift, and go to state 28
    tNOT        shift, and go to state 29
    tMINUS      shift, and go to state 30

    expr  go to state 64


State 44
